@@ -4,8 +4,11 @@ import com.kdt.please.domain.apply.Apply;
 import com.kdt.please.domain.apply.repository.ApplyRepository;
 import com.kdt.please.domain.apply.service.request.ApplyCreateRequest;
 import com.kdt.please.domain.apply.service.response.ApplyResponse;
+import com.kdt.please.domain.apply.service.response.RecruitApplyListResponse;
+import com.kdt.please.domain.apply.service.response.UserApplyListResponse;
 import com.kdt.please.domain.recruit.Recruit;
 import com.kdt.please.domain.recruit.repository.RecruitRepository;
+import com.kdt.please.domain.resume.repository.ResumeRepository;
 import com.kdt.please.domain.user.User;
 import com.kdt.please.domain.user.repository.UserRepository;
 import com.kdt.please.exception.BaseResponseStatus;
@@ -25,31 +28,47 @@ public class ApplyService {
     private final ApplyRepository applyRepository;
     private final UserRepository userRepository;
     private final RecruitRepository recruitRepository;
+    private final ResumeRepository resumeRepository;
 
     @Autowired
-    public ApplyService(ApplyRepository applyRepository, UserRepository userRepository, RecruitRepository recruitRepository){
+    public ApplyService(ApplyRepository applyRepository, UserRepository userRepository, RecruitRepository recruitRepository, ResumeRepository resumeRepository){
         this.applyRepository = applyRepository;
         this.userRepository = userRepository;
         this.recruitRepository = recruitRepository;
+        this.resumeRepository = resumeRepository;
     }
 
     // 지원 내역 리스트 조회
-    public List<ApplyResponse> getApplyListByUserId(Long userId, Pageable pageable){
+    public List<RecruitApplyListResponse> getApplyListByUserId(Long userId, Pageable pageable){
         Page<Apply> applyPage = applyRepository.findAllByUser_UserId(userId, pageable);
-        List<Apply> applyList = applyPage.stream().collect(Collectors.toList());
-        return ApplyResponse.from(applyList);
+        List<Apply> applyList = applyPage.stream().toList();
+
+        return applyList.stream()
+                .map(value -> RecruitApplyListResponse.from(value.getRecruit(), value.getApplyId()))
+                .toList();
     }
 
-    public List<ApplyResponse> getApplyListByRecruitId(Long recruitId, Pageable pageable){
+    public List<UserApplyListResponse> getApplyListByRecruitId(Long recruitId, Pageable pageable){
         Page<Apply> applyPage = applyRepository.findAllByRecruit_RecruitId(recruitId, pageable);
-        List<Apply> applyList = applyPage.stream().collect(Collectors.toList());
-        return ApplyResponse.from(applyList);
+        List<Apply> applyList = applyPage.stream().toList();
+
+        return applyList.stream()
+                .map(value -> UserApplyListResponse
+                        .from(
+                            resumeRepository.findById(value.getResumeId())
+                                    .orElseThrow(() -> new CustomException(BaseResponseStatus.DATA_NOT_FOUND)),
+                            value.getApplyId()
+                        )
+                ).toList();
     }
 
     // 지원 내역 정보 등록
     public ApplyResponse createApply(Long recruitId, ApplyCreateRequest applyCreateRequest) {
         User user = userRepository.findByUserId(applyCreateRequest.userId()).orElseThrow(() -> new CustomException(BaseResponseStatus.DATA_NOT_FOUND));
         Recruit recruit = recruitRepository.findById(recruitId).orElseThrow(() -> new CustomException(BaseResponseStatus.DATA_NOT_FOUND));
+
+        resumeRepository.findById(applyCreateRequest.resumeId()).orElseThrow(() -> new CustomException(BaseResponseStatus.RESUME_NOT_COMPLETE));
+
         return applyRepository.findByRecruit_RecruitId(recruitId).map(value -> ApplyResponse.from(
                 applyRepository.save(Apply.builder()
                         .applyId(value.getApplyId())
@@ -74,5 +93,19 @@ public class ApplyService {
                         .build()
                 )
         )).orElseThrow(() -> new CustomException(BaseResponseStatus.MODIFY_FAIL_APPLY));
+    }
+
+    // 지원 상세 조회
+    public ApplyResponse getApply(Long recruitId, Long userId){
+        return applyRepository.findByRecruit_RecruitIdAndUser_UserId(recruitId, userId)
+                .map(ApplyResponse::from)
+                .orElseThrow(() -> new CustomException(BaseResponseStatus.DATA_NOT_FOUND));
+    }
+
+    public ApplyResponse getApply(Long applyId){
+        return ApplyResponse.from(
+                applyRepository.findById(applyId)
+                        .orElseThrow(() -> new CustomException(BaseResponseStatus.DATA_NOT_FOUND))
+        );
     }
 }
